[metadata]
name = pyka3005p-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Korad KA3005P power supply control library (unofficial)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pyka3005p
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requies =
	pylabdevs-tspspi

[options.packages.find]
where = src
